kubernetes/ideas-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ideas
spec:
  selector:
    matchLabels:
      app: ideas
  replicas: 1
  template:
    metadata:
      labels:
        app: ideas
    spec:
      containers:
        - name: ideas
          image: registry.hub.docker.com/flolu/cents-ideas_ideas:0.2.1
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: cents-ideas-ideas
spec:
  selector:
    app: ideas
  ports:
    - name: http
      port: 3000
  type: ClusterIP

---
# // TODO change name to ideas-event-store
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ideas-db
spec:
  selector:
    matchLabels:
      app: ideas-db
  replicas: 1
  template:
    metadata:
      labels:
        app: ideas-db
    spec:
      containers:
        - name: ideas-db
          image: mongo:4.0
          volumeMounts:
            - name: persistent-db-storage
              mountPath: /data/db
      volumes:
        - name: persistent-db-storage
          persistentVolumeClaim:
            claimName: database-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: cents-ideas-ideas-db
spec:
  selector:
    app: ideas-db
  ports:
    - name: mongo
      port: 27017
  type: ClusterIP
